@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -36,6 +36,7 @@ import jdk.test.lib.Platform;
 import jdk.test.lib.Utils;
 import jdk.test.lib.helpers.ClassFileInstaller;
 import jdk.test.whitebox.WhiteBox;
+import jtreg.SkippedException;
 
 import java.io.PrintWriter;
 import java.io.StringWriter;
@@ -45,7 +46,9 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * This class represents the main entry point to the test framework whose main purpose is to perform regex-based checks on
@@ -82,19 +85,19 @@ import java.util.stream.Collectors;
  * {@code runXX()} methods of {@link TestFramework}. The second way, which gives more control, is to create a new
  * {@code TestFramework} builder object on which {@link #start()} needs to be eventually called to start the testing.
  * <p>
- * The framework is called from the <i>driver VM</i> in which the JTreg test is initially run by specifying {@code
+ * The framework is called from the <i>Driver VM</i> in which the JTreg test is initially run by specifying {@code
  * @run driver} in the JTreg header. This strips all additionally specified JTreg VM and Javaoptions.
- * The framework creates a new <i>flag VM</i> with all these flags added again in order to figure out which flags are
+ * The framework creates a new <i>Flag VM</i> with all these flags added again in order to figure out which flags are
  * required to run the tests specified in the test class (e.g. {@code -XX:+PrintIdeal} and {@code -XX:+PrintOptoAssembly}
  * for IR matching).
  * <p>
- * After the flag VM terminates, it starts a new <i>test VM</i> which performs the execution of the specified
+ * After the Flag VM terminates, it starts a new <i>Test VM</i> which performs the execution of the specified
  * tests in the test class as described in {@link Test}, {@link Check}, and {@link Run}.
  * <p>
- * In a last step, once the test VM has terminated without exceptions, IR matching is performed if there are any IR
+ * In a last step, once the Test VM has terminated without exceptions, IR matching is performed if there are any IR
  * rules and if no VM flags disable it (e.g. not running with {@code -Xint}, see {@link IR} for more details).
  * The IR regex matching is done on the output of {@code -XX:+PrintIdeal} and {@code -XX:+PrintOptoAssembly} by parsing
- * the hotspot_pid file of the test VM. Failing IR rules are reported by throwing a {@link IRViolationException}.
+ * the hotspot_pid file of the Test VM. Failing IR rules are reported by throwing a {@link IRViolationException}.
  *
  * @see Test
  * @see Check
@@ -139,15 +142,21 @@ public class TestFramework {
                     "UseAVX",
                     "UseSSE",
                     "UseSVE",
-                    "UseZbb",
-                    "UseRVV",
                     "Xlog",
                     "LogCompilation",
-                    "UseCompactObjectHeaders"
+                    "UseCompactObjectHeaders",
+                    "UseFMA",
+                    // Riscv
+                    "UseRVV",
+                    "UseZbb",
+                    "UseZfh",
+                    "UseZicond",
+                    "UseZvbb"
             )
     );
 
     public static final boolean VERBOSE = Boolean.getBoolean("Verbose");
+    public static final boolean PRINT_RULE_MATCHING_TIME = Boolean.getBoolean("PrintRuleMatchingTime");
     public static final boolean TESTLIST = !System.getProperty("Test", "").isEmpty();
     public static final boolean EXCLUDELIST = !System.getProperty("Exclude", "").isEmpty();
     private static final boolean REPORT_STDOUT = Boolean.getBoolean("ReportStdout");
@@ -157,7 +166,7 @@ public class TestFramework {
                                                #############################################################
                                                 - To only run the failed tests use -DTest, -DExclude,
                                                   and/or -DScenarios.
-                                                - To also get the standard output of the test VM run with
+                                                - To also get the standard output of the Test VM run with
                                                   -DReportStdout=true or for even more fine-grained logging
                                                   use -DVerbose=true.
                                                #############################################################
@@ -174,6 +183,7 @@ public class TestFramework {
     private List<String> flags;
     private int defaultWarmup = -1;
     private boolean testClassesOnBootClassPath;
+    private boolean allowNotCompilable = false;
 
     /*
      * Public interface methods
@@ -226,10 +236,10 @@ public class TestFramework {
     }
 
     /**
-     * Tests the class from which this method was invoked from. The test VM is called with the specified {@code flags}.
+     * Tests the class from which this method was invoked from. The Test VM is called with the specified {@code flags}.
      * <ul>
      *     <li><p>The {@code flags} override any set VM or Javaoptions flags by JTreg by default.<p>
-     *            Use {@code -DPreferCommandLineFlags=true} if you want to prefer the JTreg VM and  Javaoptions flags over
+     *            Use {@code -DPreferCommandLineFlags=true} if you want to prefer the JTreg VM and Javaoptions flags over
      *            the specified {@code flags} of this method.</li>
      *     <li><p>If you want to run your entire JTreg test with additional flags, use this method.</li>
      *     <li><p>If you want to run your entire JTreg test with additional flags but for another test class then the one
@@ -238,7 +248,7 @@ public class TestFramework {
      *            {@link #addScenarios(Scenario...)}</li>
      * </ul>
      *
-     * @param flags VM flags to be used for the test VM.
+     * @param flags VM flags to be used for the Test VM.
      */
     public static void runWithFlags(String... flags) {
         StackWalker walker = StackWalker.getInstance(StackWalker.Option.RETAIN_CLASS_REFERENCE);
@@ -248,13 +258,13 @@ public class TestFramework {
     }
 
     /**
-     * Add VM flags to be used for the test VM. These flags override any VM or Javaoptions set by JTreg by default.<p>
+     * Add VM flags to be used for the Test VM. These flags override any VM or Javaoptions set by JTreg by default.<p>
      * Use {@code -DPreferCommandLineFlags=true} if you want to prefer the VM or Javaoptions over the scenario flags.
      *
      * <p>
      * The testing can be started by invoking {@link #start()}
      *
-     * @param flags VM options to be applied to the test VM.
+     * @param flags VM options to be applied to the Test VM.
      * @return the same framework instance.
      */
     public TestFramework addFlags(String... flags) {
@@ -296,7 +306,7 @@ public class TestFramework {
     }
 
     /**
-     * Add scenarios to be used for the test VM. A test VM is called for each scenario in {@code scenarios} by using the
+     * Add scenarios to be used for the Test VM. A Test VM is called for each scenario in {@code scenarios} by using the
      * specified VM flags in the scenario. The scenario flags override any flags set by {@link #addFlags(String...)}
      * and thus also override any VM or Javaoptions set by JTreg by default.<p>
      * Use {@code -DPreferCommandLineFlags=true} if you want to prefer the VM and Javaoptions over the scenario flags.
@@ -304,7 +314,7 @@ public class TestFramework {
      * <p>
      * The testing can be started by invoking {@link #start()}
      *
-     * @param scenarios scenarios which specify specific flags for the test VM.
+     * @param scenarios scenarios which specify specific flags for the Test VM.
      * @return the same framework instance.
      */
     public TestFramework addScenarios(Scenario... scenarios) {
@@ -317,12 +327,82 @@ public class TestFramework {
 
         for (Scenario scenario : scenarios) {
             int scenarioIndex = scenario.getIndex();
-            TestFormat.checkNoThrow(scenarioIndices.add(scenarioIndex),
-                             "Cannot define two scenarios with the same index " + scenarioIndex);
+            if (!scenarioIndices.add(scenarioIndex)) {
+                TestFormat.failNoThrow("Cannot define two scenarios with the same index " + scenarioIndex);
+                continue;
+            }
             this.scenarios.add(scenario);
         }
         TestFormat.throwIfAnyFailures();
         return this;
+    }
+
+    /**
+     * Add the cross-product (cartesian product) of sets of flags as Scenarios. Unlike when constructing
+     * scenarios directly a string can contain multiple flags separated with a space. This allows grouping
+     * flags that have to be specified together. Further, an empty string in a set stands in for "no flag".
+     * <p>
+     * Passing a single set will create a scenario for each of the provided flags in the set (i.e. the same as
+     * passing an additional set with an empty string only).
+     * <p>
+     * Example:
+     * <pre>
+     *     addCrossProductScenarios(Set.of("", "-Xint", "-Xbatch -XX:-TieredCompilation"),
+     *                              Set.of("-XX:+UseNewCode", "-XX:UseNewCode2"))
+     * </pre>
+     *   produces the following Scenarios
+     * <pre>
+     *     Scenario(0, "-XX:+UseNewCode")
+     *     Scenario(1, "-XX:+UseNewCode2")
+     *     Scenario(2, "-Xint", "-XX:+UseNewCode")
+     *     Scenario(3, "-Xint", "-XX:+UseNewCode2")
+     *     Scenario(4, "-Xbatch -XX:-TieredCompilation", "-XX:+UseNewCode")
+     *     Scenario(5, "-Xbatch -XX:-TieredCompilation", "-XX:+UseNewCode2")
+     * </pre>
+     *
+     * @param flagSets sets of flags to generate the cross product for.
+     * @return the same framework instance.
+     */
+    @SafeVarargs
+    final public TestFramework addCrossProductScenarios(Set<String>... flagSets) {
+        TestFormat.checkAndReport(flagSets != null &&
+                                  Arrays.stream(flagSets).noneMatch(Objects::isNull) &&
+                                  Arrays.stream(flagSets).flatMap(Set::stream).noneMatch(Objects::isNull),
+                                  "Flags must not be null");
+        if (flagSets.length == 0) {
+            return this;
+        }
+
+        int initIdx = 0;
+        if (this.scenarioIndices != null && !this.scenarioIndices.isEmpty()) {
+            initIdx = this.scenarioIndices.stream().max(Comparator.comparingInt(Integer::intValue)).get() + 1;
+        }
+        AtomicInteger idx = new AtomicInteger(initIdx);
+
+        Stream<List<String>> crossProduct = Arrays.stream(flagSets)
+            .reduce(
+                Stream.of(Collections.emptyList()), // Initialize Stream<List<String>> acc with a Stream containing an empty list of Strings.
+                (Stream<List<String>> acc, Set<String> set) ->
+                    acc.flatMap(lAcc -> // For each List<String>> lAcc in acc...
+                        set.stream().map(flag -> { // ...and each flag in the current set...
+                            List<String> newList = new ArrayList<>(lAcc); // ...create a new list containing lAcc...
+                            newList.add(flag); // ...and append the flag.
+                            return newList;
+                        }) // This results in one List<List<String>> for each lAcc...
+                    ), // ...that get flattened into one big List<List<String>>.
+                Stream::concat); // combiner; if any reduction steps are executed in parallel, just concat two streams.
+
+        Scenario[] newScenarios = crossProduct
+            .map(flags -> new Scenario( // For each List<String> flags in crossProduct create a new Scenario.
+                idx.getAndIncrement(),
+                flags.stream() // Process flags
+                     .map(s -> Set.of(s.split("[ ]"))) // Split multiple flags in the same string into separate strings.
+                     .flatMap(Collection::stream) // Flatten the Stream<List<String>> into Stream<String>>.
+                     .filter(s -> !s.isEmpty()) // Remove empty string flags.
+                     .toList()
+                     .toArray(new String[0])))
+            .toList().toArray(new Scenario[0]);
+        return addScenarios(newScenarios);
     }
 
     /**
@@ -342,6 +422,7 @@ public class TestFramework {
         if (shouldInstallWhiteBox()) {
             installWhiteBox();
         }
+        checkCompatibleFlags();
         checkIRRuleCompilePhasesFormat();
         disableIRVerificationIfNotFeasible();
 
@@ -409,10 +490,23 @@ public class TestFramework {
     }
 
     /**
-     * Get the VM output of the test VM. Use {@code -DVerbose=true} to enable more debug information. If scenarios
+     * In rare cases, methods may not be compilable because of a compilation bailout. By default, this leads to a
+     * test failure. However, if such cases are expected in multiple methods in a test class, this flag can be set to
+     * true, which allows any test to pass even if there is a compilation bailout. If only selected methods are prone
+     * to bail out, it is preferred to use {@link Test#allowNotCompilable()} instead for more fine-grained control.
+     * By setting this flag, any associated {@link IR} rule of a test is only executed if the test method was compiled,
+     * and else it is ignored silently.
+     */
+    public TestFramework allowNotCompilable() {
+        this.allowNotCompilable = true;
+        return this;
+    }
+
+    /**
+     * Get the VM output of the Test VM. Use {@code -DVerbose=true} to enable more debug information. If scenarios
      * were run, use {@link Scenario#getTestVMOutput()}.
      *
-     * @return the last test VM output.
+     * @return the last Test VM output.
      */
     public static String getLastTestVMOutput() {
         return TestVMProcess.getLastTestVMOutput();
@@ -592,27 +686,42 @@ public class TestFramework {
      * Disable IR verification completely in certain cases.
      */
     private void disableIRVerificationIfNotFeasible() {
-        if (irVerificationPossible) {
-            irVerificationPossible = Platform.isDebugBuild() && !Platform.isInt() && !Platform.isComp();
-            if (!irVerificationPossible) {
-                System.out.println("IR verification disabled due to not running a debug build (required for PrintIdeal" +
-                                   "and PrintOptoAssembly), running with -Xint, or -Xcomp (use warm-up of 0 instead)");
-                return;
-            }
-
-            irVerificationPossible = hasIRAnnotations();
-            if (!irVerificationPossible) {
-                System.out.println("IR verification disabled due to test " + testClass + " not specifying any @IR annotations");
-                return;
-            }
-
-            // No IR verification is done if additional non-whitelisted JTreg VM or Javaoptions flag is specified.
-            irVerificationPossible = onlyWhitelistedJTregVMAndJavaOptsFlags();
-            if (!irVerificationPossible) {
-                System.out.println("IR verification disabled due to using non-whitelisted JTreg VM or Javaoptions flag(s)."
-                                   + System.lineSeparator());
-            }
+        if (!irVerificationPossible) {
+            return;
         }
+
+        boolean debugTest = Platform.isDebugBuild();
+        boolean intTest = !Platform.isInt();
+        boolean compTest = !Platform.isComp();
+        boolean irTest = hasIRAnnotations();
+        // No IR verification is done if additional non-whitelisted JTreg VM or Javaoptions flag is specified.
+        List<String> nonWhiteListedFlags = anyNonWhitelistedJTregVMAndJavaOptsFlags();
+        boolean nonWhiteListedTest = nonWhiteListedFlags.isEmpty();
+
+        irVerificationPossible = debugTest && intTest && compTest && irTest && nonWhiteListedTest;
+        if (irVerificationPossible) {
+            return;
+        }
+
+        System.out.println("IR verification disabled due to the following reason(s):");
+        if (!debugTest) {
+            System.out.println("- Not running a debug build (required for PrintIdeal and PrintOptoAssembly)");
+        }
+        if (!intTest) {
+            System.out.println("- Running with -Xint (no compilations)");
+        }
+        if (!compTest) {
+            System.out.println("- Running with -Xcomp (use warm-up of 0 instead)");
+        }
+        if (!irTest) {
+            System.out.println("- Test " + testClass + " not specifying any @IR annotations");
+        }
+        if (!nonWhiteListedTest) {
+            System.out.println("- Using non-whitelisted JTreg VM or Javaoptions flag(s):");
+            nonWhiteListedFlags.forEach((f) -> System.out.println("  - " + f));
+        }
+
+        System.out.println();
     }
 
     /**
@@ -687,9 +796,9 @@ public class TestFramework {
     }
 
     /**
-     * Execute a separate "flag" VM with White Box access to determine all test VM flags. The flag VM sends an encoding of
-     * all required flags for the test VM to the driver VM over a socket. Once the flag VM exits, this driver VM parses the
-     * test VM flags, which also determine if IR matching should be done, and then starts the test VM to execute all tests.
+     * Execute a separate Flag VM with White Box access to determine all Test VM flags. The Flag VM sends an encoding of
+     * all required flags for the Test VM to the Driver VM over a socket. Once the Flag VM exits, this Driver VM parses the
+     * Test VM flags, which also determine if IR matching should be done, and then starts the Test VM to execute all tests.
      */
     private void start(Scenario scenario) {
         if (scenario != null && !scenario.isEnabled()) {
@@ -714,12 +823,12 @@ public class TestFramework {
                     "" : " - [" + String.join(", ", additionalFlags) + "]";
 
             if (shouldVerifyIR) {
-                // Only need to use flag VM if an IR verification is possibly done.
+                // Only need to use Flag VM if an IR verification is possibly done.
                 System.out.println("Run Flag VM:");
                 FlagVMProcess flagVMProcess = new FlagVMProcess(testClass, additionalFlags);
                 shouldVerifyIR = flagVMProcess.shouldVerifyIR();
                 if (shouldVerifyIR) {
-                    // Add more flags for the test VM which are required to do IR verification.
+                    // Add more flags for the Test VM which are required to do IR verification.
                     additionalFlags.addAll(flagVMProcess.getTestVMFlags());
                 } // else: Flag VM found a reason to not do IR verification.
             } else {
@@ -740,28 +849,40 @@ public class TestFramework {
         return Arrays.stream(testClass.getDeclaredMethods()).anyMatch(m -> m.getAnnotationsByType(IR.class).length > 0);
     }
 
-    private boolean onlyWhitelistedJTregVMAndJavaOptsFlags() {
+    private void checkCompatibleFlags() {
+        for (String flag : Utils.getTestJavaOpts()) {
+            if (flag.contains("-agentpath")) {
+                throw new SkippedException("Can't run test with agent.");
+            }
+        }
+    }
+
+    private List<String> anyNonWhitelistedJTregVMAndJavaOptsFlags() {
         List<String> flags = Arrays.stream(Utils.getTestJavaOpts())
                                    .map(s -> s.replaceFirst("-XX:[+|-]?|-(?=[^D|^e])", ""))
-                                   .collect(Collectors.toList());
+                                   .toList();
+        List<String> nonWhiteListedFlags = new ArrayList<>();
         for (String flag : flags) {
+            if (flag.contains("agentpath")) {
+                throw new SkippedException("Can't run test with -javaagent");
+            }
             // Property flags (prefix -D), -ea and -esa are whitelisted.
             if (!flag.startsWith("-D") && !flag.startsWith("-e") && JTREG_WHITELIST_FLAGS.stream().noneMatch(flag::contains)) {
                 // Found VM flag that is not whitelisted
-                return false;
+                nonWhiteListedFlags.add(flag);
             }
         }
-        return true;
+        return nonWhiteListedFlags;
     }
 
     private void runTestVM(List<String> additionalFlags) {
         TestVMProcess testVMProcess = new TestVMProcess(additionalFlags, testClass, helperClasses, defaultWarmup,
-                                                        testClassesOnBootClassPath);
+                                                        allowNotCompilable, testClassesOnBootClassPath);
         if (shouldVerifyIR) {
             try {
-                TestClassParser testClassParser = new TestClassParser(testClass);
+                TestClassParser testClassParser = new TestClassParser(testClass, allowNotCompilable);
                 Matchable testClassMatchable = testClassParser.parse(testVMProcess.getHotspotPidFileName(),
-                                                                     testVMProcess.getIrEncoding());
+                                                                     testVMProcess.getApplicableIRRules());
                 IRMatcher matcher = new IRMatcher(testClassMatchable);
                 matcher.match();
             } catch (IRViolationException e) {
@@ -771,7 +892,7 @@ public class TestFramework {
         } else {
             System.out.println("IR verification disabled either due to no @IR annotations, through explicitly setting " +
                                "-DVerify=false, due to not running a debug build, using a non-whitelisted JTreg VM or " +
-                               "Javaopts flag like -Xint, or running the test VM with other VM flags added by user code " +
+                               "Javaopts flag like -Xint, or running the Test VM with other VM flags added by user code " +
                                "that make the IR verification impossible (e.g. -XX:-UseCompile, " +
                                "-XX:TieredStopAtLevel=[1,2,3], etc.).");
         }
